030-software/fluxcd/apps/job-seeker/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: job-seeker
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 81
      targetPort: sessions
      protocol: TCP
      name: sessions
  selector:
    app: job-seeker
